modified:   bridgeLibrary.js  	new file:   distributionCombinations.js  	modified:   testInBrowser/index.html  	new file:   testInBrowser/style_1.css

--- a/testInBrowser/index.html
+++ b/testInBrowser/index.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../style_1.css" rel="stylesheet">
+    <link href="./style_1.css" rel="stylesheet">
 </head>
 <body>
     <p>
         Hello World
     </p>
     <script src="../bridgeLibrary.js"></script>
+    <script src="../distributionCombinations.js"></script>
 </body>
 </html>
